# fishus-bevy

./: Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: build-macos.yml  build-windows.yml  build.yml
src/: main.rs
